the big fix on item gaps for all

--- a/assets/less/item.less
+++ b/assets/less/item.less
@@ -76,7 +76,7 @@ blockquote {
 .item-buttons           {
   float                 :     right;
   text-align            :     right;
-  margin-top            :     calc( 2px - @item-visual-gap);
+  margin-top            :     calc( 2px - @item-visual-gap );
 
 }
 
@@ -92,5 +92,6 @@ blockquote {
 
 .item-reference {
   padding: 0;
+  margin: 0;
   padding-bottom: calc( @item-visual-gap * 0.5 );
 }
